--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -23,6 +23,11 @@
     <%= f.label :price_in_cents %><br>
     <%= f.number_field :price_in_cents %>
   </div>
+
+  <div class="field">
+    <%= f.label :photo_product %>
+    <%= f.text_field :photo_product %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
