--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,6 +14,10 @@
   <strong>Price in cents:</strong>
   <%= @product.price_in_cents %>
 </p>
+<p>
+	<strong>Picture</strong>
+	<%= @product.photo_product %>
+</p>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
