--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,7 +16,7 @@
 </p>
 <p>
 	<strong>Picture</strong>
-	<%= @product.photo_product %>
+	<%= image_tag @product.photo_product %>
 </p>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
