--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :discription %><br>
-    <%= f.text_area :discription %>
+    <%= f.label :description %><br>
+    <%= f.text_area :description %>
   </div>
   <div class="field">
     <%= f.label :price_in_cents %><br>
@@ -26,7 +26,7 @@
 
   <div class="field">
     <%= f.label :photo_product %>
-    <%= f.text_field :photo_product %>
+    <%= f.text_field :photo %>
   </div>
   <div class="actions">
     <%= f.submit %>
