--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Discription</th>
+      <th>description</th>
       <th>Price in cents</th>
       <th colspan="3"></th>
     </tr>
@@ -16,7 +16,7 @@
     <% @products.each do |product| %>
       <tr>
         <td><%= product.name %></td>
-        <td><%= product.discription %></td>
+        <td><%= product.description %></td>
         <td><%= product.price_in_cents %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
