trying to fix comments

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -25,7 +25,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :photo_product %>
+    <%= f.label :photo %>
     <%= f.text_field :photo %>
   </div>
   <div class="actions">
