--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_area :comment %>
   </div>
   <div class="field">
-    <%= f.label :product_id %><br>
-    <%= f.text_field :product_id %>
+     <%# f.label :product_id %><br>
+    <%= f.hidden_field :product_id, value: @product.id  %>
   </div>
   <div class="actions">
     <%= f.submit %>
