--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,31 +1,36 @@
 <p id="notice"><%= notice %></p>
+<body>
+<div class="createp">
+  <h1><%= link_to 'Let\'s Sell Something!', new_product_path %></h1>
 
-<h1>Listing Products</h1>
-
-<table>
-  <thead>
-    <tr>
+<h2>Listed Products</h2>
+</div>
+<table class="table-head">
+  <!-- <thead>
+   
       <th>Name</th>
-      <th>description</th>
+      <th>Description</th>
       <th>Price</th>
       <th colspan="3"></th>
-    </tr>
-  </thead>
+    
+  </thead> -->
 
-  <tbody>
+    <div class="productdescrip">
     <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.description %></td>
-        <td><%=  "$" + product.price_conversion %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div class="products">
+      
+        <%= product.name %>
+       <%= product.description %>
+       <%=  "$" + product.price_conversion %>
+       <%= link_to 'Show', product %>
+       <%= link_to 'Edit', edit_product_path(product) %>
+       <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </div>
     <% end %>
+  </div>
   </tbody>
 </table>
-
+</body>
 <br>
 
-<%= link_to 'New Product', new_product_path %>
+
