--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,35 @@
 <html>
 <head>
   <title>Openair</title>
+
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
+<header>
+
+<div class="logo_header"> 
+
+<%= image_tag ("Rainforest Logo-01.png"), id: "Image_tag_logo" %>
+
+<ul>
+<li>Login / Register</li>
+<li>Help</li>
+<li> <%= image_tag ("Shopping-Cart-Icon-5.jpg"), id: "cart_icon" %> Shopping Cart</li>
+
+</ul>
+</div>
+<br>
+
+
+
+</header>
+
+
+
+
+
 <body>
 
 <%= yield %>
