Added images for products

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -27,7 +27,7 @@
 
     <div class="productdescrip">
     <% @products.each do |product| %>
-      <div class="products">
+      <div class="product">
       
         <%= product.name %>
        <%= product.description %>
