--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,7 +5,8 @@
   <%= @product.name %>
 </p>
 <p>
-
+<%= image_tag ("bicycle.jpg"), id: "bicycle" %>
+	<%= image_tag ("toaster.jpg"), id: "toaster" %>
 	<%= image_tag @product.photo %>
 </p>
 
