Adjusted listed products font size

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,9 +21,9 @@ div.createp{
 }
 
 div.createp h2 {
-	font-size: 19px;
+	font-size: 25px;
 	padding-top: 5%;
-	margin: 0 43%;
+	margin: 10px 41%;
 }
 
 body {
