adjusted new product page margin and padding

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -24,11 +24,12 @@
     <%= f.number_field :price_in_cents %>
   </div>
 
-  <div class="field">
+  <div id="picture" class="field">
     <%= f.label :photo %>
     <%= f.text_field :photo %>
   </div>
-  <div class="actions">
+  <div id="newstuff" class="actions">  
     <%= f.submit %>
   </div>
 <% end %>
+
