--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,7 @@
  *= require_tree .
  *= require_self
  */
-div.createp{
+div.createp {
 	font-family: Helvetica;
 	font-size: 15px;
 	text-align: center;
@@ -81,5 +81,21 @@ ul li {
 	height: 20px; 
 }
 
+div.field {
+	margin: 10px;
+}
 
+div.actions{
+	padding-top: 5px;
+}
+
+
+div#picture {
+	padding-top: 10px;
+	padding-bottom: 5px;
+}
+
+div#newstuff {
+	margin: 10px;
+}
 
