--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,21 @@ div.createp{
 	padding-top: 50px;
 }
 
+.logo_header {
+
+	font-family: Helvetica,sans-serif;
+	font-size: 13px;
+	background-color: #E6FAEF;
+	padding-bottom: 85px;
+	box-shadow: 0px 0px 8px 0px #010101;
+	width: 100%;
+	height: 100px;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+
+
 div.createp h2 {
 	font-size: 25px;
 	padding-top: 5%;
@@ -48,17 +63,6 @@ div.productdescrip {
 }
 
 
-.logo_header {
-
-	font-family: Helvetica,sans-serif;
-	font-size: 12px;
-	background-color: #E6FAEF;
-	padding-bottom: 85px;
-	box-shadow: 0px 0px 8px 0px #010101;
-	width: 100%;
-	height: 55px;
-}
-
 
 #Image_tag_logo {
 padding-top: 15px;
@@ -70,25 +74,41 @@ float: left;
 ul {
 
 	margin-right: 20px;
+	padding-top: 20px;
 }
 
 
 ul.menubar li {
 	display: inline;
+	font-weight: bold;
+	color: black;
 	padding: 10px;
 	text-align: right;
 	float: right;
+	text-decoration: none;
 }
 
 ul.menubar li:first-child {
-	margin-top: 12px;
-
+	margin-top: 10px;
 }
+
+ul.menubar li:nth-child(2) {
+	margin-top: 8px;
+}
+
 
 ul.menubar li:last-child {
 	margin-top: 10px;
 
 }
+
+ul.menubar li a:hover {
+	padding-top: 3px;
+	color: #034624;
+	text-decoration: none;
+
+}
+
 
 
 #cart_icon {
@@ -99,9 +119,24 @@ ul.menubar li:last-child {
 
 ul.footerbar li {
 	display: inline;
-	font-family: Helvetica, sans-serif;
-	font-size: 12px;
-	background-color: white;
+	font-weight: bold;
+	color: black;
+	padding: 10px;
+	text-decoration: none;
+}
+ul.footerbar li a:hover{
+	color: #034624;
+	text-decoration: none;
+}
+
+footer {
+   text-align: right;
+   font-size: 13px;
+   position:fixed;
+   bottom:25px;
+   height:30px;
+   width:100%;
+
 }
 
 
