--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,8 @@
 <%= image_tag ("Rainforest Logo-01.png"), id: "Image_tag_logo" %>
 
 <ul class="menubar">
-<li>Help</li>
-<li> <%= image_tag ("Shopping-Cart-Icon-5.jpg"), id: "cart_icon" %> Shopping Cart</li>
+<li><a href="#">Help</a></li>
+<li><a href="#"> <%= image_tag ("Shopping-Cart-Icon-5.jpg"), id: "cart_icon" %> Shopping Cart</a></li>
 <li><a href="#">Login / Register</a></li>
 </ul>
 </div>
@@ -35,11 +35,11 @@
 
 <footer>
 	<ul class="footerbar">
-<li>About Us</li>
-<li>FAQs</li>
-<li>Support</li>
-<li>Contact</li>
-<li>Careers</li>
+<li><a href="#">About Us</a></li>
+<li><a href="#">FAQs</a></li>
+<li><a href="#">Support</a></li>
+<li><a href="#">Contact</a></li>
+<li><a href="#">Careers</a></li>
 </ul>
 
 
