Stylized New Product Page and added div new_product_page in application.css

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,15 +16,23 @@
 
 <div class="logo_header"> 
 
+
+
 <%= image_tag ("Rainforest Logo-01.png"), id: "Image_tag_logo" %>
 
+
 <ul class="menubar">
+
 <li><a href="#">Help</a></li>
 <li><a href="#"> <%= image_tag ("Shopping-Cart-Icon-5.jpg"), id: "cart_icon" %> Shopping Cart</a></li>
-<li><a href="#">Login / Register</a></li>
+
+<li><a href="#">SIGN IN / REGISTER</a></li>
 </ul>
+
 </div>
+
 <br>
+
 </header>
 <body>
 
