--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -25,7 +25,7 @@
   </div>
 
   <div id="picture" class="field">
-    <%= f.label :photo %>
+    <%= f.label :photo %><br>
     <%= f.text_field :photo %>
   </div>
   <div id="newstuff" class="actions">  
