--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,7 +28,7 @@ div.createp {
 	padding-bottom: 85px;
 	box-shadow: 0px 0px 8px 0px #010101;
 	width: 100%;
-	height: 100px;
+	height: 90px;
 	padding-left: 20px;
 	padding-right: 20px;
 }
@@ -62,6 +62,28 @@ div.productdescrip {
 	margin: 0 30%;
 }
 
+.new_product_page {
+	font-family: Helvetica, sans-serif;
+	margin-top: auto;
+	margin-bottom: auto;
+	margin-right: auto;
+	margin-left: auto;
+	text-align: center;
+	border-radius: 5px;
+	background-color: #E6FAEF;
+	box-shadow: 0px 0px 8px 0px grey;
+	width: 400px;
+    padding: 25px;
+    
+   /* margin: 25px;*/
+}
+
+.new_product_page h1 {
+	font-weight: bold;
+	color: #034624;
+
+
+}
 
 
 #Image_tag_logo {
@@ -99,20 +121,15 @@ ul.menubar li:nth-child(2) {
 
 ul.menubar li:last-child {
 	margin-top: 10px;
-
 }
 
 ul.menubar li a:hover {
 	padding-top: 3px;
 	color: #034624;
 	text-decoration: none;
-
 }
 
-
-
 #cart_icon {
-
 	width: 20px;
 	height: 20px; 
 }
@@ -129,21 +146,25 @@ ul.footerbar li {
 	display: inline;
 	font-weight: bold;
 	color: black;
-	padding: 10px;
+	padding-right: 20px;
 	text-decoration: none;
+
 }
+
 ul.footerbar li a:hover{
 	color: #034624;
 	text-decoration: none;
 }
 
 footer {
-   text-align: right;
-   font-size: 13px;
+   text-align: center;
+   font-size: 12px;
    position:fixed;
-   bottom:25px;
-   height:30px;
+   bottom:0px;
+   height:50px;
    width:100%;
+   background-color: #E6FAEF;
+   box-shadow: 0px 0px 8px 0px grey;
 
 }
 
@@ -155,4 +176,6 @@ div#picture {
 div#newstuff {
 	margin: 10px;
 }
+
+
 
