--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -6,3 +6,9 @@
 
 <%= link_to 'Back', products_path %>
 </div>
+<script>
+$(document).ready(function(){
+	$("div.new_product_page").hide()
+	$("div.new_product_page").fadeIn("slow")
+});
+</script>
