--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,11 +38,11 @@
 </header>
 <body>
 
-
+<div class="wutwut">
 <%= yield %>
-
+</div>
 </body>
-
+ 
 <footer>
 	<ul class="footerbar">
 <li><a href="#">About Us</a></li>
