--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -64,6 +64,17 @@ div.products {
 
 div.productdescrip {
 	margin: 0 30%;
+	font-family: Helvetica, sans-serif;
+	margin-top: auto;
+	margin-bottom: auto;
+	margin-right: auto;
+	margin-left: auto;
+	text-align: center;
+	border-radius: 5px;
+	background-color: #E6FAEF;
+	box-shadow: 0px 0px 8px 0px grey;
+	width: 350px;
+    padding: 25px;
 }
 
 .new_product_page {
