--- a/app/views/devise/menu/_login_items.html.erb
+++ b/app/views/devise/menu/_login_items.html.erb
@@ -4,6 +4,6 @@
   </li>
 <% else %>
   <li>
-  <%= link_to('Login/Register', new_user_session_path)  %>  
+ <%=image_tag "login.png", id: "login"%><%= link_to(' LOGIN / REGISTER', new_user_session_path)  %>  
   </li>
 <% end %>
