--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,22 +23,14 @@
 
 <ul class="menubar">
 
-<ul class="hmenu">
-  <%= render 'devise/menu/registration_items' %>
-  <%= render 'devise/menu/login_items' %>
-</ul>
-
-
 <li><%=image_tag "help.png", id: "help_icon"%> <%=link_to "Help", products_path%></li>
 <li><%=image_tag "cart.png", id: "cart_icon"%> <%=link_to "Shopping Cart", products_path%></li>
-
-
-
-<!-- <li><a href="#">SIGN IN / REGISTER</a></li> -->
+<li><%= render 'devise/menu/registration_items' %></li>
+<li><%= render 'devise/menu/login_items' %></li>
 
 </ul>
+   <%= render 'products/search' %>
 
-<%= render 'search', id:"search" %>
 </div>
 
 <br>
