--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
 <li><%= render 'devise/menu/login_items' %></li>
 
 </ul>
-   <%= render 'products/search' %>
+   <div class="search"><%= render 'products/search' %></div>
 
 </div>
 
