--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,11 +21,18 @@
 	text-decoration: none;
 }
 
-.createp h1 {
-	color: black;
+.createp h1 a{
+	color: #034624;
 	font-weight: bold;
 	text-decoration: none;
 }
+
+.createp h1 a:hover{
+	color: #02b058;
+	font-weight: bold;
+	text-decoration: none;
+}
+
 
 .createp, .show_product h4, h5 {
 	font-weight: bold;
@@ -35,7 +42,6 @@
 
 
 .logo_header {
-
 	font-family: Helvetica,sans-serif;
 	font-size: 13px;
 	background-color: #E6FAEF;
@@ -81,7 +87,7 @@ div.productdescrip {
     padding: 25px;
 }
 
-.new_product_page, .show_product, .edit_reviews {
+.new_product_page, .show_product, .signup, .logout, .log_in, .edit_signup {
 	font-family: Helvetica, sans-serif;
 	margin-top: 5%;
 	margin-right: auto;
@@ -94,6 +100,21 @@ div.productdescrip {
     padding: 25px; 
     margin-bottom: 10%;
 }
+
+.edit_product {
+	text-align: center;
+	width: 400px;
+	margin-right: auto;
+	margin-left: auto;
+	background-color: #E6FAEF;
+	padding-top: 25px; 
+	padding-bottom: 25px;
+	border-radius: 5px;
+	margin-bottom: 10%;
+	margin-top: 5%;
+	}
+
+
 
 .new_product_page h1 {
 	font-weight: bold;
@@ -123,21 +144,21 @@ float: left;
 
 }
 
-ul {
-	padding-top: 20px;
+ul.menubar { 
+	padding-top: 10px;
 	margin-right: 15px;
 }
 
-#search {
-	margin-top: auto;
-	margin-left: 70px;
+.search_bar {
+
+
 }
 
 .menubar li {
 	display: inline;
 	font-weight: bold;
 	color: black;
-	margin-top: 15px;
+	margin-top: 25px;
 	float: right;
 	text-decoration: none;
 	padding-right: 10px;
@@ -148,10 +169,12 @@ ul {
 	padding-right: 30px;
 }
 
-
-.menubar li a:hover {
-	padding-top: 3px;
+.menubar li a {
 	color: #034624;
+	text-decoration: none;
+}
+.menubar li a:hover {
+	color: #02b058;
 	text-decoration: none;
 }
 
@@ -171,12 +194,24 @@ ul.footerbar li {
 	color: black;
 	padding-right: 20px;
 	text-decoration: none;
+	padding-top: 20px;
+
 
 }
 
+ul.footerbar {
+	padding-top: 10px;
+	}
+
 .footerbar li a:hover{
+	color: #02b058;
+	text-decoration: none;
+}
+
+.footerbar li a {
 	color: #034624;
 	text-decoration: none;
+
 }
 
 footer {
