--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,18 +18,20 @@
 
 <div class="logo_header"> 
 
+
 <%= link_to (image_tag "Rainforest Logo-01.png", id: "Image_tag_logo"), products_path %>
 
 
+ 
 <ul class="menubar">
-
 <li><%=image_tag "help.png", id: "help_icon"%> <%=link_to "Help", products_path%></li>
 <li><%=image_tag "cart.png", id: "cart_icon"%> <%=link_to "Shopping Cart", products_path%></li>
 <li><%= render 'devise/menu/registration_items' %></li>
 <li><%= render 'devise/menu/login_items' %></li>
 
 </ul>
-   <div class="search"><%= render 'products/search' %></div>
+
+<div class="search_bar"><%= render 'products/search' %></div>  
 
 </div>
 
