--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,3 +1,4 @@
+<div class= "form">
 <%= form_for(@product) do |f| %>
   <% if @product.errors.any? %>
     <div id="error_explanation">
@@ -32,4 +33,4 @@
     <%= f.submit %>
   </div>
 <% end %>
-
+</div>
