--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,7 +3,7 @@
 <div class="createp">
   <h1><%= link_to 'Let\'s Sell Something!', new_product_path %></h1>
 
-<h4>Just Want to Browse? Check Out Our Products</h4>
+<h4>Just Want to Browse? Check Out Our Products!</h4>
 </div>
 <table class="table-head">
  
