Refixed search bar. whew.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
 
 </ul>
 
-<div class="search_bar"><%= render 'products/search' %></div>  
+<div id="search"><%= render 'products/search', id: "search" %> </div>
 
 </div>
 
