--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -57,6 +57,8 @@
 body {
 	background-image: url("jungle_copy.jpg");
 	height: 100%;
+	background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 table.table-head {
@@ -114,8 +116,6 @@ div.productdescrip {
 	margin-top: 5%;
 	}
 
-
-
 .new_product_page h1 {
 	font-weight: bold;
 	color: #034624;
@@ -149,8 +149,9 @@ ul.menubar {
 	margin-right: 15px;
 }
 
-.search_bar {
-
+#search {
+margin-left: 250px;
+margin-top: 11px;
 
 }
 
