formatted photo and fixed search bar formatting

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,9 +29,9 @@
 <li><%= render 'devise/menu/registration_items' %></li>
 <li><%= render 'devise/menu/login_items' %></li>
 
+<li><%= render 'products/search', id: "search" %></li>
 </ul>
 
-<div id="search"><%= render 'products/search', id: "search" %> </div>
 
 </div>
 
