--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,16 +11,19 @@
     <div class="productdescrip">
     <% @products.each do |product| %>
       <div class="product">
-      
-        <%= product.name %>
-       <%= product.description %>
-       <%=  "$" + product.price_conversion %>
-       <%= link_to 'Show', product %>
+      <%= image_tag product.photo %> 
+       <p><h4> <%= product.name %></h4></p>
+      <!-- <p> <%= product.description %></p> -->
+       <p> <%=  "$" + product.price_conversion %></p>
+        <p><h6><%= link_to 'Show', product %>
        <%= link_to 'Edit', edit_product_path(product) %>
-       <%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+       <%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' } %></h6> <br>
       </div>
+
     <% end %>
+  
   </div>
+  
   </tbody>
 </table>
 </body>
