--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
 	font-family: Helvetica;
 	font-size: 15px;
 	text-align: center;
-	padding-top: 7%;
+	padding-top: 1%;
 	text-decoration: none;
 }
 
@@ -65,32 +65,43 @@ table.table-head {
 }
 
 div.products {
-	border: 1px solid;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	width: 400px;
-	background-color: #E6FAEF;
+	
+	margin: 20px;
+	width: 100%;
+	
 }
 
 div.productdescrip {
-	margin: 0 30%;
 	font-family: Helvetica, sans-serif;
-	margin-top: auto;
-	margin-bottom: auto;
-	margin-right: auto;
-	margin-left: auto;
+	margin: 20px 20px ;
 	text-align: center;
 	border-radius: 5px;
 	background-color: #E6FAEF;
 	box-shadow: 0px 0px 8px 0px grey;
-	width: 350px;
+	width: 280px;
     padding: 25px;
-    margin-bottom:100px;
+    margin-bottom:80px;
+    float: left;
 }
 
 .productdescrip h4 {
 	font-weight: bold;
 }
+
+.productdescrip img{
+	width: 100%;
+}
+
+.productdescrip h6 a{
+	color: black;
+	font-weight: bold;
+}
+
+.productdescrip h6 a:hover{
+color: #034624;
+text-decoration: none
+}
+
 
 .new_product_page, .signup, .logout, .log_in, .edit_signup {
 	font-family: Helvetica, sans-serif;
@@ -245,7 +256,7 @@ footer {
 #picture {
 	padding-top: 5px;
 	padding-bottom: 5px;
-	max-width: 400px;
+	max-width: 260px;
 }
 
 #newstuff {
@@ -257,3 +268,6 @@ p3{
 
 
 
+.clear-me{
+	clear: both;
+}
