--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -249,15 +249,8 @@ footer {
    background-color: #E6FAEF;
    box-shadow: 0px 0px 8px 0px grey;
    position: fixed;
-
-
 }
 
-#picture {
-	padding-top: 5px;
-	padding-bottom: 5px;
-	max-width: 260px;
-}
 
 #newstuff {
 	margin: 10px;
@@ -266,7 +259,16 @@ p3{
 	padding-bottom: 10px;
 }
 
+div.log_in {
+    -webkit-animation: myfirst 4s; 
+    animation: myfirst 4s;
+}
 
+
+ @-webkit-keyframes myfirst {
+    from {background: white;}
+    to {background: #E6FAEF;}
+}
 
 .clear-me{
 	clear: both;
